--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build-fotr-backend": "yarn build --outDir '../hct_mis_api/apps/web/static/web' --emptyOutDir",
+    "build-for-backend": "yarn build --outDir '../hct_mis_api/apps/web/static/web' --emptyOutDir",
     "build-and-watch": "yarn build-for-backend --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "TZ=UTC jest --config jest.config.ts",
