--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -17,3 +17,6 @@ addopts =
         --echo-version django
         --cov-config=.coveragerc
         --cov=hct_mis_api
+
+markers =
+        elasticsearch
