--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ dependency_groups = dev
 pass_env =
     GEOS_LIBRARY_PATH
     GDAL_LIBRARY_PATH
+    PYTHONBREAKPOINT
+    PYTHONDONTWRITEBYTECODE
 set_env =
     PYTHONUNBUFFERED=1
     SECRET_KEY=secretkey
@@ -42,6 +44,7 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
+        --cov-report=html \
         {posargs: tests/unit}
 
 
