--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,7 @@ commands =
         --randomly-seed=42 \
         --create-db \
         --cov-report=html \
+        --cov-report=xml \
         {posargs: tests/unit}
 
 
