--- a/tox.ini
+++ b/tox.ini
@@ -123,9 +123,9 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    black --check .
-    isort --check .
-    flake8 .
+    black --check src tests
+    isort --check src tests
+    flake8 src tests
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
