fixes tox.ini config

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py312
+envlist = unit, selenium, lint, mypy
 requires =
     tox>=4.2
     tox-gh-actions
@@ -91,7 +91,7 @@ commands =
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    mypy .
+    mypy src
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -99,7 +99,7 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    black .
+    black src tests
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -107,7 +107,7 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    isort .
+    isort src tests
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -115,7 +115,7 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run flake8 type checking
 commands =
-    flake8 .
+    flake8 src tests
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -133,10 +133,10 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    black .
-    isort .
-    flake8 .
-    mypy .
+    black src tests
+    isort src tests
+    flake8 src tests
+    mypy src tests
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
