--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,7 +110,7 @@ dev = [
     "requests-mock<2.0.0,>=1.9.3",
     "responses<1.0,>=0.22",
     "snapshottest<2.0.0,>=1.0.0a0",
-    "types-freezegun<2.0.0,>=1.1.10",
+    "types-freezegun",
     "types-requests==2.31.0.6",
     "types-python-dateutil<3.0.0.0,>=2.8.19.2",
     "types-pytz<2023.0.0.0,>=2022.4.0.0",
