--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -14,6 +14,7 @@ addopts =
         --maxfail=20
         --capture=sys
         --reuse-db
+        --no-migrations
         --echo-version django
         --cov-config=.coveragerc
         --cov=hct_mis_api
