--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ dev = [
     "flake8-absolute-import<2.0.0.0,>=1.0.0.1",
     "flake8-bugbear<23.0.0,>=22.9.23",
     "flake8-formatter-junit-xml<1.0.0,>=0.0.6",
+    "freezegun",
     "graphene-stubs<1.0,>=0.15",
     "ipdb<1.0.0,>=0.13.9",
     "isort<6.0.0,>=5.10.1",
@@ -229,7 +230,7 @@ dependencies = [
     "drf-spectacular[sidecar]<1.0,>=0.27",
     "drf-extensions==0.7.1",
     "elasticsearch-dsl~=8.14.0",
-    "gevent==25.5.1",
+    "gevent",
     "graphene-file-upload<2.0.0,>=1.3.0",
     "gunicorn<21.0.0,>=20.1.0",
     "ipython<9.0.0,>=8.4.0",
@@ -268,8 +269,6 @@ dependencies = [
     "django-fernet-fields>=0.6",
     "msoffcrypto-tool>=5.4.2",
     "pyzipper>=0.3.6",
-    "drf-nested-routers>=0.94.0",
-    "freezegun",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
