--- a/tox.ini
+++ b/tox.ini
@@ -38,12 +38,10 @@ commands =
     pytest \
         --no-migrations \
         -rw \
-        --reruns 3 \
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:} \
-        ./tests/unit
+        {posargs: ./tests/unit}
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
