--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:} /
+        {posargs:} \
         ./tests/unit
 
 [testenv:selenium]
