--- a/pyproject.toml
+++ b/pyproject.toml
@@ -164,7 +164,7 @@ docs = [
 
 [project]
 name = "hope"
-version = "3.2.5"
+version = "3.2.6"
 description = "HCT MIS is UNICEF's humanitarian cash transfer platform."
 authors = [
     { name = "Tivix" },
@@ -268,6 +268,7 @@ dependencies = [
     "django-fernet-fields>=0.6",
     "msoffcrypto-tool>=5.4.2",
     "pyzipper>=0.3.6",
+    "legacy-cgi>=2.6.3",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
