fixing all tests

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs: tests/unit}
+        tests/unit {posargs:}
 
 
 [testenv:selenium]
