--- a/pyproject.toml
+++ b/pyproject.toml
@@ -257,7 +257,7 @@ dependencies = [
     "xlrd<2.0,>=1.2",
     "weasyprint<60.0,>=59.0",
     "tomli<3.0.0,>=2.0.1",
-    "sentry-sdk==2.8.0",
+    "sentry-sdk",
     "django-debug-toolbar<5.0.0,>=4.3.0",
     "django-graphiql-debug-toolbar<1.0.0,>=0.2.0",
     "django-rest-extensions>=0.2.0",
