--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -13,11 +13,11 @@ addopts =
         --tb=short
         --maxfail=20
         --capture=sys
-        --reuse-db
+        --create-db
         --no-migrations
         --echo-version django
-        --cov-config=.coveragerc
-        --cov=hct_mis_api
+        #--cov-config=.coveragerc
+        #--cov=hct_mis_api
 
 markers =
         elasticsearch
