--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -16,8 +16,8 @@ addopts =
         --create-db
         --no-migrations
         --echo-version django
-        #--cov-config=.coveragerc
-        #--cov=hct_mis_api
+        --cov-config=.coveragerc
+        --cov=hct_mis_api
 
 markers =
         elasticsearch
