--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -13,7 +13,7 @@ addopts =
         --tb=short
         --maxfail=20
         --capture=sys
-        --create-db
+        --reuse-db
         --no-migrations
         --echo-version django
         --cov-config=.coveragerc
