--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,6 @@ dependency_groups = dev
 pass_env =
     GEOS_LIBRARY_PATH
     GDAL_LIBRARY_PATH
-    PYTHONBREAKPOINT
-    PYTHONDONTWRITEBYTECODE
 set_env =
     PYTHONUNBUFFERED=1
     SECRET_KEY=secretkey
@@ -44,8 +42,8 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        tests/unit {posargs:}
-
+        {posargs:} \
+        ./tests/unit
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
@@ -89,7 +87,7 @@ commands =
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    mypy src
+    mypy .
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -97,7 +95,7 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    black src tests
+    black .
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -105,7 +103,7 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    isort src tests
+    isort .
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -113,7 +111,7 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run flake8 type checking
 commands =
-    flake8 src tests
+    flake8 .
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -121,9 +119,9 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    black --check src tests
-    isort --check src tests
-    flake8 src tests
+    black --check .
+    isort --check .
+    flake8 .
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
@@ -131,10 +129,10 @@ uv_sync_flags = --no-editable
 runner = uv-venv-lock-runner
 description = run mypy type checking
 commands =
-    black src tests
-    isort src tests
-    flake8 src tests
-    mypy src tests
+    black .
+    isort .
+    flake8 .
+    mypy .
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
