--- a/.github/helpers/.env-unit
+++ b/.github/helpers/.env-unit
@@ -3,8 +3,8 @@ SECRET_KEY=31283012-38dasda
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
-REP_DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
+DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+REP_DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
 EMAIL_HOST=TBD
 EMAIL_HOST_USER=TBD
 EMAIL_HOST_PASSWORD=TBD
