--- a/development_tools/.env.example
+++ b/development_tools/.env.example
@@ -9,8 +9,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASS=postgres
 PGUSER=postgres
 POSTGRES_HOST_AUTH_METHOD=trust
-DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
-REP_DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
+DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+REP_DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
 POSTGRES_SSL_MODE=off
 EMAIL_HOST=TBD
 EMAIL_HOST_USER=TBD
