--- a/.github/helpers/.env-selenium
+++ b/.github/helpers/.env-selenium
@@ -6,7 +6,7 @@ CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
 CACHE_LOCATION=redis://redis:6379/1
 CONSTANCE_REDIS_CONNECTION=redis://redis:6379/0
-DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
-REP_DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
+DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+REP_DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
 USE_DUMMY_EXCHANGE_RATES=yes
 CELERY_TASK_ALWAYS_EAGER=true
