--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,8 @@ set_env =
     CACHE_LOCATION=redis://localhost:6379/1
     CACHE_ENABLED=false
     CONSTANCE_REDIS_CONNECTION=redis://localhost:6379/0
-    DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
-    REP_DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
+    DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+    REP_DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
     USE_DUMMY_EXCHANGE_RATES=yes
     CELERY_TASK_ALWAYS_EAGER=true
     ELASTICSEARCH_SYNONYMS_FILE={toxinidir}/src/data/synonyms.txt
@@ -64,8 +64,8 @@ set_env =
     CACHE_LOCATION=redis://localhost:6379/1
     CACHE_ENABLED=false
     CONSTANCE_REDIS_CONNECTION=redis://localhost:6379/0
-    DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
-    REP_DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
+    DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+    REP_DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
     USE_DUMMY_EXCHANGE_RATES=yes
     CELERY_TASK_ALWAYS_EAGER=true
     ELASTICSEARCH_SYNONYMS_FILE={toxinidir}/src/data/synonyms.txt
@@ -156,8 +156,8 @@ set_env =
     CACHE_LOCATION=redis://localhost:6379/1
     CACHE_ENABLED=false
     CONSTANCE_REDIS_CONNECTION=redis://localhost:6379/0
-    DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
-    REP_DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
+    DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+    REP_DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
     USE_DUMMY_EXCHANGE_RATES=yes
     CELERY_TASK_ALWAYS_EAGER=true
     ELASTICSEARCH_SYNONYMS_FILE={toxinidir}/src/data/synonyms.txt
