--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,6 +131,7 @@ dev = [
     "coverage<8.0.0,>=7.3.2",
     "tox>=4.25.0",
     "tox-uv>=1.25.0",
+    "pytest-mock>=3.14.1",
 ]
 docs = [
     "cairosvg>=2.7.1",
