--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -107,11 +107,11 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "6.x",
-    "@typescript-eslint/parser": "6.x",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "babel-jest": "^29.7.0",
-    "braces": "3.0.3",
-    "esbuild": "0.24.2",
+    "braces": "^3.0.3",
+    "esbuild": "^0.25.8",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -121,14 +121,14 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
     "jest-resolve": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
-    "micromatch": "4.0.8",
+    "micromatch": "^4.0.8",
     "prettier": "3.4.2",
     "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.1.2",
