--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ commands =
         --randomly-seed=42 \
         --create-db \
         {posargs:} \
-        ./tests/selenium
+        ./tests/e2e
 
 [testenv:mypy]
 runner = uv-venv-lock-runner
