--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -57,13 +57,14 @@
     "cross-spawn": "^7.0.3",
     "date-fns": "^4.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "form-data": "^4.0.4",
     "formik": "^2.4.5",
     "glob": "^9.0.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "helmet": "^8.0.0",
     "i18next": "^24.2.2",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -122,8 +123,6 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "faker": "^6.6.6",
-    "globals": "^15.14.0",
     "js-yaml": "^4.1.0",
     "micromatch": "4.0.8",
     "msw": "^2.7.3",
