--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -129,7 +129,7 @@
     "openapi-typescript-codegen": "^0.29.0",
     "prettier": "3.4.2",
     "react-test-renderer": "^19.0.0",
-    "typescript": "^5.5.4",
+    "typescript": "5.5.4",
     "vite-plugin-csp-guard": "^2.1.0",
     "vitest": "^3.0.7"
   }
