fix ci yarn tests

--- a/.github/workflows/frontend-checks.yml
+++ b/.github/workflows/frontend-checks.yml
@@ -27,5 +27,5 @@ jobs:
         working-directory: src/frontend
       - run: yarn lint
         working-directory: src/frontend
-      - run: yarn test --watchAll=false
+      - run: yarn test --run
         working-directory: src/frontend
