--- a/codecov.yml
+++ b/codecov.yml
@@ -16,8 +16,8 @@ coverage:
     - "*/migrations/*"
     - "*/apps.py"
     - "*/admin/*.py"
-    - "*/admin.py"
-    - "**/fixtures.py"
+    - "*/payment_admin.py"
+    - "**/aurora.py"
     - "src/hct_mis_api/one_time_scripts/*"
     - "src/hct_mis_api/libs/*"
     - "src/hct_mis_api/settings/*"
