fixing bugs from Marek merge

--- a/tox.ini
+++ b/tox.ini
@@ -105,3 +105,8 @@ description = run mypy type checking
 commands =
     mypy src
 dependency_groups = dev
+
+[testenv:clean]
+runner = uv-venv-lock-runner
+commands =
+    ruff check --fix src tests
