--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,6 @@ skip_missing_interpreters = true
 
 [testenv]
 base_python = python3.13
-package = wheel
-wheel_build_env = .pkg
 deps =
     d32: django==3.2.*
 pass_env =
@@ -52,6 +50,11 @@ commands =
 [testenv:unit]
 runner = uv-venv-lock-runner
 description = Run unit tests
+pass_env =
+    GDAL_LIBRARY_PATH
+    GEOS_LIBRARY_PATH
+    PYTHONBREAKPOINT
+    PYTHONDONTWRITEBYTECODE
 commands =
     pytest \
       --no-migrations \
@@ -110,3 +113,25 @@ dependency_groups = dev
 runner = uv-venv-lock-runner
 commands =
     ruff check --fix src tests
+
+[testenv:pytest]
+runner = uv-venv-lock-runner
+description = Run unit tests
+pass_env =
+    GDAL_LIBRARY_PATH
+    GEOS_LIBRARY_PATH
+    PYTHONBREAKPOINT
+    PYTHONDONTWRITEBYTECODE
+commands =
+    pytest \
+      --no-migrations \
+      -rw \
+      -sv \
+      -rP \
+      -p no:capturelog \
+      -p no:warnings \
+      --randomly-seed=42 \
+      --create-db \
+      --cov-report= \
+      {posargs: ./tests/unit}
+dependency_groups = dev
