fix number of connection to postgres in docker compose

--- a/development_tools/compose.yml
+++ b/development_tools/compose.yml
@@ -6,7 +6,13 @@ volumes:
 services:
   db:
     image: postgres:14.3
-    command: -c 'max_connections=200'
+    shm_size: 512m
+    command: # full form
+      - "postgres"
+      - "-c"
+      - "max_connections=1000"
+      - "-c"
+      - "shared_buffers=256MB"
     volumes:
       - db:/var/lib/postgresql/data
       - ./postgres/init:/docker-entrypoint-initdb.d
