added test for updating rules

--- a/tox.ini
+++ b/tox.ini
@@ -130,6 +130,7 @@ commands =
       -rP \
       -p no:capturelog \
       -p no:warnings \
+      --disable-warnings \
       --randomly-seed=42 \
       --create-db \
       --cov-report= \
