--- a/tox.ini
+++ b/tox.ini
@@ -98,8 +98,7 @@ commands =
       --reruns-delay 1 \
       --randomly-seed=42 \
       --create-db \
-      {posargs:} \
-      ./tests/e2e
+      {posargs: ./tests/e2e}
 dependency_groups = dev
 
 [testenv:mypy]
