--- a/tox.ini
+++ b/tox.ini
@@ -93,10 +93,12 @@ set_env =
 commands =
     pytest \
       -rw \
+      -vv \
       --no-migrations \
       --reruns 3 \
       --reruns-delay 1 \
       --randomly-seed=42 \
+      --dist loadscope \
       --create-db \
       {posargs:} \
       ./tests/e2e
