--- a/pyproject.toml
+++ b/pyproject.toml
@@ -271,6 +271,7 @@ dependencies = [
     "pyzipper>=0.3.6",
     "legacy-cgi>=2.6.3",
     "paramiko>=4.0.0",
+    "types-paramiko>=4.0.0.20250821",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
