--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ commands =
       --reruns-delay 1 \
       --randomly-seed=42 \
       --create-db \
+      --tb=short \
       tests/unit {posargs:}
 dependency_groups = dev
 
@@ -128,13 +129,14 @@ commands =
     pytest \
       --no-migrations \
       -rw \
-      -sv \
       -rP \
+      -q \
       -p no:capturelog \
       -p no:warnings \
       --disable-warnings \
       --randomly-seed=42 \
       --create-db \
       --cov-report= \
+      --tb=short \
       {posargs: ./tests/unit}
 dependency_groups = dev
