--- a/tox.ini
+++ b/tox.ini
@@ -129,8 +129,8 @@ commands =
     pytest \
       --no-migrations \
       -rw \
-      -rP \
       -q \
+      -rfE \
       -p no:capturelog \
       -p no:warnings \
       --disable-warnings \
