adjusting tests output

--- a/tox.ini
+++ b/tox.ini
@@ -54,16 +54,21 @@ pass_env =
     GDAL_LIBRARY_PATH
     GEOS_LIBRARY_PATH
     PYTHONBREAKPOINT
-    PYTHONDONTWRITEBYTECODE
+    PYTHONDONTWRITEBYTECOD
+set_env =
+    {[testenv]set_env}
+    PYTHONWARNINGS = ignore
 commands =
     pytest \
       --no-migrations \
-      -rw \
-      --reruns 3 \
-      --reruns-delay 1 \
+      -q \
+      -rfE \
+      --no-header \
+      --tb=short \
       --randomly-seed=42 \
       --create-db \
-      --tb=short \
+      --reruns 3 \
+      --reruns-delay 1 \
       tests/unit {posargs:}
 dependency_groups = dev
 
@@ -125,18 +130,18 @@ pass_env =
     GEOS_LIBRARY_PATH
     PYTHONBREAKPOINT
     PYTHONDONTWRITEBYTECODE
+set_env =
+    {[testenv]set_env}
+    PYTHONWARNINGS = ignore
 commands =
     pytest \
       --no-migrations \
-      -rw \
       -q \
       -rfE \
-      -p no:capturelog \
-      -p no:warnings \
-      --disable-warnings \
+      --no-header \
+      --tb=short \
       --randomly-seed=42 \
       --create-db \
       --cov-report= \
-      --tb=short \
       {posargs: ./tests/unit}
 dependency_groups = dev
