--- a/ruff.toml
+++ b/ruff.toml
@@ -77,6 +77,7 @@ ignore = [
     "PLR0912", # too many branches
     "PLR0913",  # too many arguments
     "PLR0915",  # too many statements
+    "PLC0415",  # `import` should be at the top-level of a file
 
     "C901",  # too complex
     "BLE001",  # Do not catch blind exception: `BaseException`
