--- a/ruff.toml
+++ b/ruff.toml
@@ -29,7 +29,7 @@ select = [
     "Q", # flake8-quotes
     "R", # PyLint Refactor
     "RET", # flake8-return
-#    "S", # bandit,
+    "S", # bandit,
     "SIM", # flake8-simplify
     "T10", # flake8-debugger
     "T20", # flake8-print
@@ -81,7 +81,6 @@ ignore = [
 
     "C901",  # too complex
     "BLE001",  # Do not catch blind exception: `BaseException`
-    "PLC0415",  # `import` should be at the top-level of a file
 ]
 
 [format]
