revert pytest.ini

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -12,9 +12,9 @@ addopts =
         -p no:capturelog
         -p no:warnings
         --tb=short
-;        --maxfail=20
+        --maxfail=20
         --capture=sys
-;        --reuse-db
+        --reuse-db
         --no-migrations
         --echo-version django
         --cov-config=.coveragerc
