--- a/tox.ini
+++ b/tox.ini
@@ -60,6 +60,7 @@ set_env =
     PYTHONWARNINGS = ignore
 commands =
     pytest \
+      --no-migrations \
       -q \
       -rfE \
       --no-header \
@@ -99,6 +100,7 @@ commands =
     pytest \
       -rw \
       -vv \
+      --no-migrations \
       --reruns 3 \
       --reruns-delay 1 \
       --randomly-seed=42 \
